modiefied the client build scripts to allow the reactor app serve them up; added a heroku deployment script; fixed an issue with transforming the skills list from a string to an array